# py3dengine-old

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  config.ini  config.json  default.json  refresh.sh
src/: implementation-plan.txt  main.c
src/headers/: camera.h  collision.h  config.h  custom_path.h  custom_string.h  engine.h  game_object.h  json_parser.h  lights.h  logger.h  material.h  model.h  python_wrapper.h  quad.h  quadmodel.h  rendering_context.h  resource_manager.h  scene_importer.h  shader.h  util.h  window.h
src/headers/Components/: base_component.h  camera_component.h  model_renderer_component.h  rotation_component.h  transform_component.h
src/headers/components/: base_component.h  camera_component.h  component_factory.h  model_renderer_component.h  python_component.h  rotation_component.h  transform_component.h
src/headers/glad/: gl.h
src/headers/importers/: builtins.h  component.h  scene.h  shader.h  sprite_sheet.h  texture.h
src/headers/math/: quaternion.h  vector3.h
src/headers/physics/: collision.h  collision_list.h  collision_state.h  collision_table.h
src/headers/python/: component_helper.h  py3dcollider.h  py3dcollisionevent.h  py3dcomponent.h  py3dcontactpoint.h  py3denginemodule.h  py3dgameobject.h  py3dinput.h  py3dlight.h  py3dloggermodule.h  py3dmathmodule.h  py3dmodelrenderer.h  py3drenderingcontext.h  py3dresourcemanager.h  py3drigidbody.h  py3dscene.h  py3dspriterenderer.h  py3dtextrenderer.h  py3dtransform.h  pycomponent.h  python_util.h  python_wrapper.h
src/headers/resources/: base_resource.h  material.h  model.h  python_script.h  shader.h  sprite.h  texture.h
src/headers/wfo_parser/: object_list.h  vertex_data_list.h  wfo_parser.h
src/resources/: CameraComponent.json  CameraComponent.py  RotationComponent.json  RotationComponent.py  TestComponent.py  general_pnt.json  solid_objs.blend  solid_objs.mtl  test_pattern.png.json  test_pattern_linear.json  test_pattern_point.json
src/source/: camera.c  collision.c  config.c  custom_path.c  custom_string.c  engine.c  game_object.c  json_parser.c  lights.c  logger.c  main.c  material.c  model.c  python_wrapper.c  quad.c  quadmodel.c  rendering_context.c  resource_manager.c  scene_importer.c  shader.c  util.c  wfo_parser.c  window.c
src/source/Components/: base_component.c  camera_component.c  model_renderer_component.c  rotation_component.c  transform_component.c
src/source/components/: base_component.c  camera_component.c  component_factory.c  model_renderer_component.c  python_component.c  rotation_component.c  transform_component.c
src/source/engine/py3dengine/: Component.py  NewComponent.py  __init__.py
src/source/importers/: builtins.c  component.c  scene.c  shader.c  sprite_sheet.c  texture.c
src/source/math/: quaternion.c  vector3.c
src/source/physics/: collision.c  collision_list.c  collision_state.c  collision_table.c
src/source/python/: component_helper.c  py3dcollider.c  py3dcollisionevent.c  py3dcomponent.c  py3dcontactpoint.c  py3denginemodule.c  py3dgameobject.c  py3dinput.c  py3dlight.c  py3dloggermodule.c  py3dmathmodule.c  py3dmodelrenderer.c  py3drenderingcontext.c  py3dresourcemanager.c  py3drigidbody.c  py3dscene.c  py3dspriterenderer.c  py3dtextrenderer.c  py3dtransform.c  pycomponent.c  python_util.c  python_wrapper.c
src/source/resources/: base_resource.c  material.c  model.c  python_script.c  shader.c  sprite.c  texture.c
src/source/wfo_parser/: object_list.c  vertex_data_list.c  wfo_parser.c
